--- a/testStylesheet.css
+++ b/testStylesheet.css
@@ -122,7 +122,7 @@ h5 {
   position: absolute;
 }
 
-.symbolTable ul {
+.symbolTable table{
   list-style-type: none;
   margin: 0;
   padding-top: 8%;
@@ -130,6 +130,10 @@ h5 {
   overflow: hidden;
   size: 10px;
   width: 250px;
+}
+.symbolTable table tr td{
+  padding: 10px;
+
 }
 
 .symbolTable ul li {
