--- a/testStylesheet.css
+++ b/testStylesheet.css
@@ -1,6 +1,18 @@
 /*body {
   background-color:#040F16;
 }*/
+:root{
+--flickr-pink: #f72585ff;
+--byzantine: #b5179eff;
+--purple: #7209b7ff;
+--purple-2: #560badff;
+--trypan-blue: #480ca8ff;
+--trypan-blue-2: #3a0ca3ff;
+--persian-blue: #3f37c9ff;
+--ultramarine-blue: #4361eeff;
+--dodger-blue: #4895efff;
+--vivid-sky-blue: #4cc9f0ff;
+}
 *{margin:0;
 padding:0;
 font-family: sans-serif;}
@@ -9,11 +21,48 @@ html,body{
   height: 100%;
 }
 
-h1 {
-  color: white;
+flickr-pink{
+  color: var(--flickr-pink);
 }
+
+byzantine{
+  color: var(--byzantine);
+}
+
+purple{
+  color: var(--purple);
+}
+
+purple-2{
+  color: var(--purple-2);
+}
+
+trypan-blue{
+  color: var(--trypan-blue);
+}
+
+trypan-blue-2{
+  color: var(--trypan-blue-2);
+}
+
+persian-blue{
+  color: var(--persian-blue);
+}
+
+ultramarine-blue{
+  color: var(--ultramarine-blue);
+}
+
+dodger-blue{
+  color: var(--dodger-blue);
+}
+
+vivid-sky-blue{
+  color: var(vivid-sky-blue);
+}
+
 h2 {
-  color: #FBFBFF;
+  color: var(--flickr-pink);
 }
 h3 {
   color: #01BAEF;
@@ -27,7 +76,7 @@ h5 {
 .container{
   height: 100%;
   width: 100%;
-  background: black;
+  background: lightgrey;
   color: black;
 }
 
@@ -59,7 +108,7 @@ h5 {
   border: thin white solid;
   width: 100%;
   height:12%;
-  background: #1abc9c;
+  background: 	dimgray;
   color: white;
   position: absolute;
 }
@@ -68,7 +117,7 @@ h5 {
   list-style-type: none;
   margin-top: 2.4%;
   margin-left: 22%;
-  background-color: green;
+  background-color: 	dimgray;
   overflow: none;
 
 }
@@ -77,7 +126,7 @@ h5 {
   list-style: none;
   margin:  35px;
   color: white;
-  background: #01BAEF;
+  background: 	dimgray;
   cursor: pointer;
   float: left;
   border: thin black solid;
@@ -126,13 +175,13 @@ h5 {
   list-style-type: none;
   margin: 0;
   padding-top: 8%;
-  padding-left: 2%;
+  padding-left: 5%;
   overflow: hidden;
   size: 10px;
   width: 250px;
 }
 .symbolTable table tr td{
-  padding: 10px;
+  padding: 30px;
 
 }
 
@@ -166,4 +215,32 @@ h5 {
     font: sans-serif;
     padding: 3px;
     text-align: center;
+}
+
+.productImageTable ul{
+  list-style-type: none;
+  margin-left: 50%;
+  margin-top: 44%;
+  z-index: 103;
+  position: absolute;
+
+}
+
+.productImageTable ul li{
+    list-style-type: none;
+    float: left;
+    padding: 0px 17px;
+}
+
+.productImageTable ul li:first-child{
+    /*padding: 0px 20px;*/
+    text-align: center;
+    padding-top:40px;
+    font-size: 20pt;
+}
+.productImageTable ul li:last-child{
+    /*padding: 0px 20px;*/
+    text-align: center;
+    padding-top:40px;
+    font-size: 20pt;
 }
