--- a/testStylesheet.css
+++ b/testStylesheet.css
@@ -74,37 +74,19 @@ h5 {
   color: #B80C09;
 }
 .container{
-  height: 100%;
+  height: 200%;
   width: 100%;
   background: lightgrey;
   color: black;
 }
 
 .addToCart{
-  /*position: fixed;
-  padding: 10px;
-  background: #B80C09;
-  width: 500px;
-  left:50%;
-  text-align: center;*/
+
   right: 500px;
   color: white;
 }
 
 .toolbar{
-  /*cursor: crosshair;
-  color:#01BAEF;
-  background: white;
-  position: fixed;
-  width: 100%;
-  length: 20%;
-  top: 0px;
-  left: 0px;
-  border-bottom: 10px;
-  border-top: 10px;
-  border-left: 10px;
-  border-right: 10px;
-  border-color: lightgreen;*/
   border: thin white solid;
   width: 100%;
   height:12%;
@@ -124,14 +106,22 @@ h5 {
 
 .toolbarMenu ul li{
   list-style: none;
-  margin:  35px;
+  font-size: 20pt;
+  margin-top:  32px;
+  margin-left: 59px;
   color: white;
   background: 	dimgray;
   cursor: pointer;
   float: left;
-  border: thin black solid;
-  padding: 0px 70px;
+  padding: 0px;
+}
 
+.toolbarMenu ul li:nth-child(2){
+  padding-left: 25px;
+
+}
+.toolbarMenu ul li:last-child{
+  padding-left: 135px;
 }
 
 .logo{
@@ -142,9 +132,7 @@ h5 {
 }
 
 .SearchBar{
-  /*percentages are relative to their location, so in this case
-  the search bar takes up 30% of the height of the div it is
-  located in (in this case, toolbar)*/
+
   border: thin black solid;
   top: 25%;
   left: 25%;
@@ -156,16 +144,37 @@ h5 {
 }
 
 .cart{
-  /*background:  #FBFBFF;*/
-
   top:13%;
   left: 90%;
   position: absolute;
-  z-index: 102;
+
+}
+
+.goBack{
+  margin-top: 7.5%;
+  margin-left: 7.5%;
+  font-size: 8pt;
+  position: absolute;
+}
+.productTitleTable table{
+  margin-top: 8%;
+  margin-left: 7%;
+  position:absolute;
+  /*border: 1px solid black;*/
+}
+
+.productTitleTable{
+  font-family: sans-serif;
+  font-size: 27pt;
+}
+
+.productTitleSubtitles{
+  font-family: sans-serif;
+  font-size: 10pt;
 }
 
 .ProductOnDisplay{
-  top: 20%;
+  top: 26%;
   left: 50%;
   z-index: 1;
   position: absolute;
@@ -174,15 +183,25 @@ h5 {
 .symbolTable table{
   list-style-type: none;
   margin: 0;
-  padding-top: 8%;
+  margin-top: 12%;
   padding-left: 5%;
   overflow: hidden;
   size: 10px;
   width: 250px;
+  position: absolute;
 }
+
 .symbolTable table tr td{
   padding: 30px;
 
+}
+
+.gap{
+  padding-left: 60px;
+}
+
+.textAlign{
+  text-align: center;
 }
 
 .symbolTable ul li {
@@ -220,7 +239,7 @@ h5 {
 .productImageTable ul{
   list-style-type: none;
   margin-left: 50%;
-  margin-top: 44%;
+  margin-top: 47%;
   z-index: 103;
   position: absolute;
 
@@ -232,15 +251,40 @@ h5 {
     padding: 0px 17px;
 }
 
-.productImageTable ul li:first-child{
-    /*padding: 0px 20px;*/
+.productImageTable ul li:first-child,.productImageTable ul li:last-child{
+
     text-align: center;
     padding-top:40px;
     font-size: 20pt;
 }
-.productImageTable ul li:last-child{
-    /*padding: 0px 20px;*/
-    text-align: center;
-    padding-top:40px;
-    font-size: 20pt;
+
+.priceList{
+  margin-top: 44%;
+  margin-left: 18%;
+  font-size: 20pt;
+  position: absolute;
+}
+
+.priceListButton{
+  margin-top: 46.2%;
+  margin-left: 14.2%;
+  font-size: 20pt;
+  border-radius: 25px;
+  background: var(--vivid-sky-blue);
+  padding: 20px;
+  width: 200px;
+  height: 40px;
+  text-align: center;
+  position: absolute;
+
+}
+
+.productText{
+  margin-top: 56%;
+  margin-left: 7%;
+  position: absolute;
+}
+
+.productText dt{
+  font-size: 20pt;
 }
